--- a/hexo/css/main.css
+++ b/hexo/css/main.css
@@ -1677,7 +1677,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #8aff29;
+  background: #41f9ff;
 }
 .links-of-blogroll {
   font-size: 13px;
