--- a/hexo/css/main.css
+++ b/hexo/css/main.css
@@ -1678,7 +1678,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff3b3d;
+  background: #1632fe;
 }
 .links-of-blogroll {
   font-size: 13px;
