--- a/hexo/css/main.css
+++ b/hexo/css/main.css
@@ -1793,7 +1793,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #78ff29;
+  background: #f1d5ff;
 }
 .links-of-blogroll {
   font-size: 13px;
